ensure app adaptor survives long enough

the document deletion signals will otherwise
access already destructed objects

BUG: 453076